--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,6 +9,8 @@
 <ion-content>
   <div class="ion-padding">
     The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <ion-button (click)="onOnline()">
+      Check Status Network
+    </ion-button>
   </div>
 </ion-content>
